--- a/app/jade/flight-inbound.jade
+++ b/app/jade/flight-inbound.jade
@@ -129,6 +129,6 @@ block main
                     span.small ,000
                 label.light per person
 
-                a.btn.btn-primary.btn-submit.m-t-md.btn-md(href="flight-inbound.html") Book Now
+                a.btn.btn-primary.btn-submit.m-t-md.btn-md(href="flight-payment-step-1.html") Book Now
 
           .clearfix
