--- a/app/jade/hotel-detail.jade
+++ b/app/jade/hotel-detail.jade
@@ -282,7 +282,7 @@ block main
                       | 2,050,
                       small 000
                   span.block.f-light.text-sm per night
-                  a.btn.f-bold.text-primary(href="hotel-detail.html") See Details
+                  a.btn.f-bold.text-primary(href="hotel-payment-step-3.html") See Details
 
               .room-item.m-b-md
                 .column.pull-left.picture-thumb.pos-rlt
@@ -323,7 +323,7 @@ block main
                       | 2,950,
                       small 000
                   span.block.f-light.text-sm per night
-                  a.btn.f-bold.text-primary(href="hotel-detail.html") See Details
+                  a.btn.f-bold.text-primary(href="hotel-payment-step-3.html") See Details
 
             a.block.m-t-lg.m-t-lg.btn-show-more(href="#")
               | Show 3 More&nbsp;
