--- a/app/jade/include/credit-card-item.jade
+++ b/app/jade/include/credit-card-item.jade
@@ -29,19 +29,19 @@
       .form-inline.m-b-lg
         .form-group
           label.m-b-none Select Card Type:
-        .checkbox.m-l-md.m-r-xs
+        .radio.m-l-md.m-r-xs
           label
-            input(type="checkbox", value="visa")
+            input(type="radio", value="visa")
             img.m-l-sm(src="img/card-visa.png", alt="Visa Card", width="50")
 
-        .checkbox.m-l-sm.m-r-xs
+        .radio.m-l-sm.m-r-xs
           label
-            input(type="checkbox", value="master-card")
+            input(type="radio", value="master-card")
             img.m-l-sm(src="img/card-master-card.png", alt="Master Card", width="50")
 
-        .checkbox.m-l-sm
+        .radio.m-l-sm
           label
-            input(type="checkbox", value="american-express")
+            input(type="radio", value="american-express")
             img.m-l-sm(src="img/card-american-express.png", alt="American Express Card", width="50")
         .clearfix
 
