--- a/app/jade/tour-detail.jade
+++ b/app/jade/tour-detail.jade
@@ -32,7 +32,7 @@ block main
         .first-col.pull-left
           h4.m-t-none.text-darker.title-summary Chateaux, chic beach resorts, cheese and wine
 
-          a.m-t-lg.btn.btn-primary.btn-s-xl.book-now(href="#") Book Now
+          a.m-t-lg.btn.btn-primary.btn-s-xl.book-now(href="booking.html") Book Now
 
         .second-col.pull-left
           .summary-text
