--- a/app/less/helper/app.utilities.less
+++ b/app/less/helper/app.utilities.less
@@ -46,6 +46,8 @@ label {
 .l-h-1x{line-height: 1.2em;}
 .l-h{line-height: 1.5em;}
 .l-h{line-height: 16px}
+.l-h-20{ line-height: 20px}
+.l-h-24{line-height: 24px}
 .v-middle{vertical-align: middle !important;}
 .v-top{vertical-align: top !important;}
 .v-bottom{vertical-align: bottom !important;}
