--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -271,10 +271,16 @@
       background-position: -707px -13px;
     }
 
-    &-hotel-in {
+    &-hotel-out {
       width: 25px;
       height: 18px;
       background-position: -743px -13px;
+    }
+
+    &-room {
+      width: 13px;
+      height: 17px;
+      background-position: -780px -14px;
     }
 
     &-waiting {
