--- a/app/less/web/booking.less
+++ b/app/less/web/booking.less
@@ -2,7 +2,8 @@
   margin-top: 70px;
   overflow-x:hidden;
 
-  &.flight-payment {
+  &.flight-payment,
+  &.hotel-payment {
     margin-top: 0
   }
 
@@ -128,6 +129,11 @@
           font-family: "Gotham Black";
           line-height: 20px !important;
           font-size: 15px;
+
+          .f-light {
+            font-family: "Gotham Book";
+            font-weight: normal;
+          }
         }
       }
 
@@ -272,6 +278,129 @@
               line-height: 18px;
             }
 
+          }
+        }
+
+        &.bg-light {
+          background-color: #f8f8f8;
+        }
+      }
+    }
+
+    ul.hotel-booking-summary {
+
+      li {
+        padding: 10px 20px;
+        height: 50px;
+        min-height: 50px;
+        height: auto !important;
+        line-height: 30px;
+
+        &:first-child {
+          height: 68px;
+
+          .ico {
+            position: static;
+          }
+
+        }
+
+        &:last-child {
+          border-bottom: none;
+        }
+
+        .block.bg-white {
+          padding-left: 35px;
+        }
+
+        .ico {
+          position: absolute;
+          top: 13px;
+          left: 20px;
+
+          &-departure {
+            top: 17px;
+          }
+          &-return {
+            top: 12px;
+          }
+
+          &-adult {
+            top: 11px;
+            left: 26px;
+          }
+
+          &-airline-circle {
+            left: 22px;
+            top: 14px;
+          }
+
+          &-hotel-in,
+          &-hotel-out {
+            top: 15px;
+            left: 22px
+          }
+
+          &-room {
+            top: 15px;
+            left:25px
+          }
+        }
+
+        &.bg-white {
+          background-color: #fff;
+        }
+        &.bg-light {
+          background-color: #f8f8f8;
+        }
+      }
+
+      &.outbound-flight,
+      &.inbound-flight {
+        li {
+          height: 50px;
+          min-height: 50px;
+          height: auto !important;
+
+          &:first-child {
+            height: 48px;
+            padding: 15px 0;
+          }
+
+          &.schedule {
+            height: 80px;
+            line-height: 18px;
+
+            .ico-departure {
+              top: 30px
+            }
+
+            .ico-return {
+              top: 26px
+            }
+          }
+
+          .ico {
+            &-bag {
+              top: 17px;
+            }
+
+            &-adult {
+              left: 23px
+            }
+            &-marker {
+              top: 17px;
+            }
+          }
+
+          &.airline {
+            padding-left: 15px;
+          }
+
+          label {
+            color: #888;
+            font-size: 11px;
+            font-family: "Gotham Black"
           }
         }
       }
