--- a/app/less/helper/form.less
+++ b/app/less/helper/form.less
@@ -148,6 +148,15 @@
 
   &.booking {
   }
+
+  &.hotel-payment {
+    .boxing {
+      &.phone-number {
+        width: 250px
+      }
+    }
+  }
+
   .boxing {
     border-radius: 5px;
     -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
@@ -355,6 +364,10 @@
     height: 50px;
     width: 205px;
     border-radius: 5px;
+
+    &.text-md {
+      font-size: 14px;
+    }
 
     &:hover,
     &:focus,
