--- a/app/less/mobile/main.less
+++ b/app/less/mobile/main.less
@@ -19,6 +19,7 @@ nav#slide-menu {
   background: #1f1f1f;
   color: #fff;
   font-family: Arial, sans-serif;
+  overflow-y: scroll;
   .transition(all 300ms);
 
   a {
@@ -265,7 +266,6 @@ footer {
   cursor: pointer;
 }
 
-
 .form-search {
   .ico-search {
     position: absolute;
@@ -283,6 +283,60 @@ footer {
       font-size: 14px;
       font-weight: 400;
       border-radius: 0;
+    }
+  }
+}
+
+.top-banner {
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+
+  &.home {
+    height: 65px;
+    background: url(../img/mobile/bg-home-banner.png) repeat-x top center;
+  }
+
+  .banner-title {
+    font-size: 14px;
+    color: #fff;
+    line-height: 65px;
+  }
+}
+
+.featured-destination-list {
+
+  .item {
+    height: 131px;
+    border-color: #fff;
+  }
+
+  .featured-info {
+    color: #fff;
+    height: 130px;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    padding-left: 15px;
+    line-height: 18px;
+
+    .name {
+      margin-top: 85px;
+      margin-bottom: 5px;
+      line-height: 12px;
+    }
+
+    .f-bold {
+      font-size: 14px;
+    }
+  }
+
+  figure {
+    margin: 0;
+    height: 130px;
+    width: 100%;
+
+    img {
+      width: 100%;
+      height: 130px;
     }
   }
 }
