--- a/app/less/mobile/main.less
+++ b/app/less/mobile/main.less
@@ -3,6 +3,7 @@ body {
 
   &.mobile {
     height: 100%;
+    position: static !important;
   }
 }
 
@@ -21,7 +22,7 @@ nav#slide-menu {
   font-family: Arial, sans-serif;
   overflow-y: scroll;
   .transition(all 300ms);
-  z-index: 10;
+  z-index: 11;
 
   a {
     color: #fff;
@@ -110,10 +111,10 @@ nav#slide-menu {
 
 div#container {
   font-family: Arial, sans-serif;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1;
+  position: relative;
+  // top: 0;
+  // left: 0;
+  // z-index: 1;
   width: 100%;
   height: 100%;
   padding: 0;
@@ -128,13 +129,13 @@ div#container {
   min-height: 210px;
   height: 210px;
   height: auto !important;
+   .transition(all 300ms);
 }
 
 body.menu-active {
 
   div#container {
-    left: 240px;
-
+    margin-left: 240px;
   }
   header {
     .menu-trigger {
